Development
    Fix status icon double click code
    Add some safety checkes
    Fix single instance flicker
    Add new aspect option "Follow Window" allows viewer to tweak the aspect of the video
    Workaround for opening files on smb shares
    Apply seek on pause patch from Bug # 171
    Make a local copy of the data coming from the audio filter so it can't change while processing
    Add colorization to tracker for progress
    Add option to adjust tracker thumb visibility and position
    Fix file open error when last_dir is not set
    Changed subtitle setup so that when Use Embedded Fonts is chosen, the
        Options to select a font, outline and shadow is disabled
    Fix gm_pref_store_get_*_with_defaults to work correctly with gconf
    Add option, to allow for hiding subtitles by default thru the gui
    When looking for xvmc or vdpau vo's make sure options passed are ignored
    Fix compliation issues with --without-gconf bug #170
    Revert the usage of enca in subtitle detection
    Prevent adding a "empty" filename to the playlist
    Add menu items and hotkeys to increase/decrease subtitle scale during playback
    Add allow_expand option to tracker, should help text display when run as plugin
    Add options to enable subtitle outlineing and shadowing
    Add enca to the list of subtitle language codepages
    Switch audio meter to be non-double buffering to help speed it up
    Fix the textdomain issue in the nautilus plugin
    Arrow keys work menu in dvdnav mode, but once movie is playing they revert to normal behavior
        requires mplayer SVN r29156 to work
    When we have a video from an iPod, assume size is 640x480, since libgpod doesn't tell us the size
    Add *.ISO to the *.iso pattern match
    New preference key "use_pulse_flat_volume", set to true if running with pulseaudio 0.9.15
        Unless you have set "flat-volumes = no" in /etc/pulse/daemon.conf 