@@ -1,4 +1,6 @@
 Development
+	Rework how the audio meter data is read from mplayer
+	Fix a couple of setting bugs and initialization bugs
     Fix status icon double click code
     Add some safety checkes
     Fix single instance flicker
